# k-level-reasoning

./: .gitignore  CMakeLists.txt  README.md  bob.ini  main.cpp  matrix.cpp  matrix.h  player.cpp
Model/: config.cpp  config.h  main.cpp  player.cpp  player.h
data/BL quadrant 5 samples k1-1/: alice.ini  bob.ini  system.ini
eps/: graph1.eps  kermit.eps  noise.eps  pd00001.eps  pd000275.eps  pd001.eps  pd01.eps  pdfp00001.eps  pdfp0001.eps  pdfp0002.eps  pdfp0002alt.eps  pdfp0005.eps  pdfp0005alt.eps  pdfp001.eps  pdfps.eps  pdfpszoom.eps  pdheatmap0.eps  pdheatmap01.eps  playervstatic.eps  rpsd1.eps  rpsd2.eps  rpsd3.eps  rpsheatmap0.eps  rpsheatmap03.eps  rpsnoise1.eps  rpsnoise10.eps  rpsnoise100.eps  rpsnoiselc1.eps  rpsnoiselc2.eps  rpstremble.eps  rpstremble.tif  sample2.eps  x2batch.eps  x2bd.eps  x_2neutral.eps
mathematica-notebooks/: IPD analysis.nb  IPD linear stability analysis.nb  IPD tremble.nb  KLR_RPS_analysis.nb  Notebook.nb  kLR_RPS_stability.nb  results.nb
model/: CMakeLists.txt  alice.ini  bob.ini  config.cpp  config.json  k-level-reasoning.app  main.cpp  player.cpp
src/: alice.ini  bob.ini  config.cpp  k-level-reasoning.app  matrix.cpp  system.ini
